@startuml
package "bmt.spendly.models" {
    class AppUser {
        - int id
        - String firstName
        - String lastName
        - String username
        - String email
        - String phone
        - String address
        - String password
        - String role
        - Date createdAt

        + int getId()
        + void setId(int id)
        + String getFirstName()
        + void setFirstName(String firstName)
        + String getLastName()
        + void setLastName(String lastName)
        + String getUsername()
        + void setUsername(String username)
        + String getEmail()
        + void setEmail(String email)
        + String getPhone()
        + void setPhone(String phone)
        + String getAddress()
        + void setAddress(String address)
        + String getPassword()
        + void setPassword(String password)
        + String getRole()
        + void setRole(String role)
        + Date getCreatedAt()
        + void setCreatedAt(Date createdAt)
    }

    class LoginDto {
        - String username
        - String password

        + String getUsername()
        + void setUsername(String username)
        + String getPassword()
        + void setPassword(String password)
    }

    class RegisterDto {
        - String firstName
        - String lastName
        - String username
        - String email
        - String phone
        - String address
        - String password

        + String getFirstName()
        + void setFirstName(String firstName)
        + String getLastName()
        + void setLastName(String lastName)
        + String getUsername()
        + void setUsername(String username)
        + String getEmail()
        + void setEmail(String email)
        + String getPhone()
        + void setPhone(String phone)
        + String getAddress()
        + void setAddress(String address)
        + String getPassword()
        + void setPassword(String password)
    }

    class Group {
        - Long id
        - String nome
        - List<AppUser> membri
        - AppUser admin

        + Group()
        + Group(String nome, AppUser admin)
        + Group(String nome)

        + Long getId()
        + void setId(Long id)
        + String getNome()
        + void setNome(String nome)
        + List<AppUser> getMembri()
        + AppUser getAdmin()
        + void setAdmin(AppUser admin)
        + void AggiungiMembro(AppUser utente)
        + void RimuoviMembro(AppUser utente)
        + boolean ContieneMembro(AppUser utente)
    }

    RegisterDto ..> AppUser : "Crea"
    LoginDto ..> AppUser : "Autentica"
    Group "1" -- "*" AppUser : admin
    AppUser "*" -- "*" Group : membri
}
@enduml
